--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+# Linguist settings for Languages stats
+*.toc linguist-language=Stata
+*.pkg linguist-language=Stata
