--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,7 @@
 *.html linguist-vendored
 *.csv linguist-vendored
 *.svg linguist-vendored
+*.dta linguist-vendored
 *.ihlp linguist-language=Stata
 *.toc linguist-language=Stata
 *.pkg linguist-language=Stata
