--- a/site/_site.yml
+++ b/site/_site.yml
@@ -5,5 +5,9 @@ navbar:
   left:
     - text: "Home"
       href: index.html
+    - text: "Helpfile examples"
+      href: helpfile-examples.html
+    # - text: "Helpfiles"
+    #   menu:
     - text: "About"
       href: about.html
