Use cosmo theme

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -58,7 +58,7 @@ website:
 
 format:
   html:
-    theme: flatly
+    theme: cosmo
     css: mystyles.css
     toc: true
     highlight-style: arrow
