--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -63,6 +63,6 @@ format:
     toc: true
     highlight-style: arrow
 
-freeze: auto  # re-render only when source changes
+freeze: false  # re-render only when source changes
 
 # bibliography: refs.bib
